spellings and grammar

--- a/posts/050625.md
+++ b/posts/050625.md
@@ -4,4 +4,4 @@ tags: 'journal'
 date: 'Jun 5, 2025'
 ---
 
-i ate johnny's green noodles with bbq chicken. and also discovered that there's a species of ants that bite through wood, and leaves these flaky bits that looks like eggs. but is just chaved wood stuck together with ant saliva. gross but is very interesting. nothing much happened today. just a peaceful day at home with my mom and sis.
+i ate johnny's green noodles with bbq chicken. and also discovered that there's a species of ants that bite through wood, and leaves these flaky bits that looks like eggs. but is just chewed wood stuck together with ant saliva. gross but is very interesting. nothing much happened today. just a peaceful day at home with my mom and sis.
