--- a/posts/061724.md
+++ b/posts/061724.md
@@ -21,7 +21,7 @@ Here were a few things took away from the chats (from my goldfish memory)
 
 - it's difficult to hire gen AI talent, people's experience are not directly relevant since it's a new field, mostly toy projects and nothing substantial
 - a diverse team should have research people and builders
-- technical experience is the baseline, if you can't pass the python, sql, stats and prob, and ML basics, don't even think about getting into FAANG (side note: paraphrasing here, but this made me slightly stressed about interviews even thought i haven't started my program yet and I'm still in Malaysia)
+- technical experience is the baseline, if you can't pass the python, sql, stats and prob, and ML basics, don't even think about getting into FAANG (side note: paraphrasing here, but this made me slightly stressed about interviews even though i haven't started my program yet and I'm still in Malaysia)
 - in your internship, if you're not doing what you like, create your own projects if you can, focus on delivering results that you can show for, for your next job (i.e. if you're doing analytics, but you want to do ML)
 - first job should matter, it's the foundation for career, but don't be afraid to experiment and explore if you don't know what your niche is
 - two step process for DS job / interview
