--- a/posts/070225.md
+++ b/posts/070225.md
@@ -4,4 +4,4 @@ tags: 'journal'
 date: 'Feb 7, 2025'
 ---
 
-it was so hard to wake up today. my body felt like a million tons of cement. did homework in class. i still dislike learning mongodb queries in class. i'd rather learn about the internals of how mongodb was built from first principles, how it compares with other nosql databases through benchmarks, processing a million rows with mongodb and making it more efficient, but i guess that's where the project comes in. i've never been able to sit through tutorials. i need to solve problems. seminar series was professor Y talking about hugging face. they're now so widespread, they permeate every big company and startup, and in everyone's laptop. it's an incredible feeling to see a software you built be installed on millions of personal computers and servers, doing so many things, from chatbots to cancer research. talked to parents, i find it so hard to have a conversation with them, it might be what i regret the most if i don't develop a communcation style with them, and connect deeper. went to fellowship again with W, church showed a video about kensington in philly and the open drug market, and "the rock", a christian organization helping the addicts and kids learn the TRUTH, and get back up on their feet. i completely passed out halfway, i was so drained. after fellowship was the skit for their mission trip. they have a squid game act where they teach the lesson of not prizing money over God, and there's a dance session at the end. it's fun, i'm glad that W gets to have this community and this brought me back to both the concert at wesley and the performances at powerfun. got home at 12 something like usual.
+it was so hard to wake up today. my body felt like a million tons of cement. did homework in class. i still dislike learning mongodb queries in class. i'd rather learn about the internals of how mongodb was built from first principles, how it compares with other nosql databases through benchmarks, processing a million rows with mongodb and making it more efficient, but i guess that's where the project comes in. i've never been able to sit through tutorials. i need to solve problems. seminar series was professor Y talking about hugging face. they're now so widespread, they permeate every big company and startup, and in everyone's laptop. it's an incredible feeling to see a software you built be installed on millions of personal computers and servers, doing so many things, from chatbots to cancer research. talked to parents, i find it so hard to have a conversation with them, it might be what i regret the most if i don't develop a communication style with them, and connect deeper. went to fellowship again with W, church showed a video about kensington in philly and the open drug market, and "the rock", a christian organization helping the addicts and kids learn the TRUTH, and get back up on their feet. i completely passed out halfway, i was so drained. after fellowship was the skit for their mission trip. they have a squid game act where they teach the lesson of not prizing money over God, and there's a dance session at the end. it's fun, i'm glad that W gets to have this community and this brought me back to both the concert at wesley and the performances at powerfun. got home at 12 something like usual.
