--- a/posts/170725.md
+++ b/posts/170725.md
@@ -12,7 +12,7 @@ things i learned:
 
 - stock options: right to buy a certain number of shares of a company's stock at a predetermined price (strike price)
   - why? as company grows, the stock options would be worth more
-  - ex: strike price: $1, next year stock is worth $3. you profit $2 per share.
+  - ex: strike price: \$1, next year stock is worth \$3. you profit \$2 per share.
   - types:
     - incentive stock options (ISOs): no taxes when exercise options (unless AMT kicks in). only pay after selling shares
     - non-qualified stock options (NSO): pay tax in the year you exercise your options. then pay capitol gain tax when you sell shares.
