--- a/posts/190725.md
+++ b/posts/190725.md
@@ -12,6 +12,6 @@ date: 'Jul 19, 2025'
 >
 > linus on Twitter
 
-met up with J for lunch at hinodeya near my apartment. we talked about his apple internship, and about the startup i might be joining. i also went to replace my apple battery. i paid 96 dollars for it in total. it took abou 2 and a half hours, so in the mean time we went to macy's to walk around. there's nothing here anymore. it's boring walking around malls. union square hoever is a nice place, people are playing chess and ping pong here, and sit down to chat. it reminds me of europe. i went back to my place to catch my haircut appointment at 4:45 pm. i said i wanted a haircut that was nice for a presentation. she cut my hair much shorter againt this time. i looked like i'm back in high school.
+met up with J for lunch at hinodeya near my apartment. we talked about his apple internship, and about the startup i might be joining. i also went to replace my apple battery. i paid 96 dollars for it in total. it took about 2 and a half hours, so in the mean time we went to macy's to walk around. there's nothing here anymore. it's boring walking around malls. union square however is a nice place, people are playing chess and ping pong here, and sit down to chat. it reminds me of europe. i went back to my place to catch my haircut appointment at 4:45 pm. i said i wanted a haircut that was nice for a presentation. she cut my hair much shorter against this time. i looked like i'm back in high school.
 
 it's nice to catch up with people from your past. i rarely slow down and think about where i've come from. life can only be lived forward. but it's good to look back and appreciate the people that helped you along the way, and make time to thank them and reach out.
