--- a/posts/220525.md
+++ b/posts/220525.md
@@ -8,6 +8,6 @@ i felt nervous, i've never presented my research before. but this served as a go
 
 when it was my turn i felt calm, just seconds before i went up i decided i would share my presentation was accepted into AAPM, i felt it would boost the look on MSDS and the practicum. i do believe i lucked out, or more accurately, i believe it was God's provision that i got to partner with UCSF, which led me down this potential road of PhD.
 
-i remember minutes into my presentation, i started getting tired. i wonder how professors lecture for 2 hours, and that's just one class, how they do it the entire day i do not understand. 10 mninutes in, i wanted to stop speaking, i was listening to my own voice, cringing at how it sounds and vibrates across the room, i thought about how people are getting bored, and i should wrap it up quickly. i thought about how people don't care about what i have to say at all. but stripping away all the insecurities, i felt at peace, i wasn't nervous, only careful about what i had to say. since i didn't practice the ending enough, and fumbled it, but the entire presentation went well. i was apparently one of the finalist for bets presentation, and a director even reached out for an interview.
+i remember minutes into my presentation, i started getting tired. i wonder how professors lecture for 2 hours, and that's just one class, how they do it the entire day i do not understand. 10 minutes in, i wanted to stop speaking, i was listening to my own voice, cringing at how it sounds and vibrates across the room, i thought about how people are getting bored, and i should wrap it up quickly. i thought about how people don't care about what i have to say at all. but stripping away all the insecurities, i felt at peace, i wasn't nervous, only careful about what i had to say. since i didn't practice the ending enough, and fumbled it, but the entire presentation went well. i was apparently one of the finalist for best presentation, and a director even reached out for an interview.
 
-i wonder how different the AAPM one would be, would i be on stage? would i get tougher questions that i can't answer? there will be a lot of uncertanties, but one thing i can be sure is i will be well-prepared and groomed by my professor, and that i will do my best.
+i wonder how different the AAPM one would be, would i be on stage? would i get tougher questions that i can't answer? there will be a lot of uncertainties, but one thing i can be sure is i will be well-prepared and groomed by my professor, and that i will do my best.
