--- a/posts/260625.md
+++ b/posts/260625.md
@@ -11,7 +11,6 @@ some notes i wrote -> cleaned up by gpt 4.5
 ## CHIL highlights
 
 - **AI regulations:**
-
   - Pre‑2024 context; **HTI‑1**.
   - **EO 14179** (Jan 2025).
   - **OBBB (H.R. 1)**: House version in May 2025 proposed a 10‑year state/local AI regulation ban; provision was later removed and did **not** make it into the final law.
@@ -21,27 +20,18 @@ some notes i wrote -> cleaned up by gpt 4.5
 - **What it is:** DevOps platform for health data and analytics pipelines.
 - **Question to leaders:** “In your role leading UCSF’s research informatics strategy, how do you evaluate tools like OpenEvidence that bridge research literature and clinical practice? What metrics or frameworks do you use to assess impact on research workflows?”
 - **EHR realities:**
-
   - Database of patient info and clinical actions (procedures).
   - Also the _workflow_ backbone for care delivery; major investment in Epic.
-
 - **SMART on FHIR:**
-
   - Exposes EHR to external apps; enables innovation outside Epic.
-
 - **Patient‑generated data (PGD):**
-
   - Standardization is hard (OpenHealth attempts to help).
   - Vendors like Garmin and Oura keep data in proprietary clouds; often undocumented/uncalibrated.
   - Jupyter Health → CommonHealth ingestion to standardize for model training.
-
 - **Patient‑facing tooling:**
-
   - Columbia × Jupyter Health: reusable tools for patient outreach.
-
 - **CGM data:**
-
-  - Many clinicians aren’t trained for continuous streams.
+  - Many clinicians aren't trained for continuous streams.
   - Partner with endocrinology on clinical markers & interpretation.
   - Build a starter library of models/algorithms for these use cases.
 
@@ -54,16 +44,12 @@ some notes i wrote -> cleaned up by gpt 4.5
 - Build human‑AI systems that are humble, curious, empathetic; fix perverse incentives that remove joy from learning.
 - **AI literacy:** nurses and patients need it; curricula should revamp yearly; emphasize critical thinking.
 - **Benchmarks ≠ evaluation:**
-
-  - Benchmarks drive procurement/VC, but don’t equal real‑world performance.
+  - Benchmarks drive procurement/VC, but don't equal real‑world performance.
   - _Principles for eval frameworks:_
-
     1. **Hyperlocal:** hospital‑ and task‑specific; organize real‑world eval where patients define what matters.
     2. **Agile & reflexive:** adaptable and effective over time.
     3. **Continuous & community‑operated:** from the ground up, not just NEURIPS/CSAIL.
-
   - Always ask: _What is this evaluation for?_ Model selection ≠ clinical deployment.
-
 - **People:**
   - [Jenna C. Lester](https://www.ted.com/speakers/jenna_c_lester)
   - [Leo Anthony Celi](https://www.linkedin.com/in/leo-anthony-celi-b25131/)
@@ -92,7 +78,6 @@ some notes i wrote -> cleaned up by gpt 4.5
 - **HTI‑1 Final Rule (ONC):** [Program page](https://www.healthit.gov/topic/laws-regulation-and-policy/health-data-technology-and-interoperability-certification-program) · [Overview (PDF)](https://www.healthit.gov/sites/default/files/facas/2024-01-18_HTI-1_Final_Rule_Overview_508.pdf)
 - **Executive Order 14179 — _Removing Barriers to American Leadership in AI_:** [Presidency (UCSB)](https://www.presidency.ucsb.edu/documents/executive-order-14179-removing-barriers-american-leadership-artificial-intelligence) · [Federal Register (publication)](https://www.federalregister.gov/documents/2025/01/31/2025-02172/removing-barriers-to-american-leadership-in-artificial-intelligence)
 - **OBBB (H.R. 1) — 10‑year AI regulation moratorium (not enacted):**
-
   - [House added the 10‑year ban (May 2025)](https://apnews.com/article/ai-regulation-state-moratorium-congress-39d1c8a0758ffe0242283bb82f66d51a)
   - [Senate struck the ban (July 2025)](https://ogletree.com/insights-resources/blog-posts/u-s-senate-strikes-proposed-10-year-ban-on-state-and-local-ai-regulation-from-spending-bill/)
   - [Final law did **not** include the ban](https://www.sidley.com/en/insights/newsupdates/2025/07/the-trump-administrations-2025-ai-action-plan)
