--- a/posts/260725.md
+++ b/posts/260725.md
@@ -4,7 +4,7 @@ tags: 'journal'
 date: 'Jul 26, 2025'
 ---
 
-im back at the sf airport just in just short of 2 weeks.
+i'm back at the sf airport in just short of 2 weeks.
 
 backfilled my blog on my taiwan trip on the plane to DC. the plane ride is 5 and a half hours this time.
 
