--- a/posts/270524.md
+++ b/posts/270524.md
@@ -9,7 +9,7 @@ date: 'May 27, 2024'
 - woke up first thing today and felt a lot of mixed emotions, tint of sadness, it's been like this lately. I'm realizing that soon, when I wake up, it won't be in this house that I grew up in, with my family around me.
 - I laid in bed for an hour on my phone again, it's such a hard habit to break. Future me is suffering the consequences of current me wasting all that time being comfortable.
 - decided to finish up my sketch while having breakfast and it took me almost 2 hours. perfectionism is a curse. I also thought it was June for some reason.
-- my mom and sister actually has good eye and can tell what is good/bad and what needs correction. everyone is an artist.
+- my mom and sister actually have good eye and can tell what is good/bad and what needs correction. everyone is an artist.
 - being able to sketch on a Monday morning without any pressure or responsibilities (that is external and high stakes) is such a blessing and one that I strive for in my future life
 - I kept context switching in hopes of finishing everything but I end up only doing 10-20% in each thing. Not sure if going all in on just one thing is good too. I was exploring different ideas and brainstorming.
 - I've been ruminating over the same thing, playing movies in my head, for the past few weeks when I should just write things down, it would help me so much but I just don't do it.
