--- a/posts/270225.md
+++ b/posts/270225.md
@@ -1,6 +1,6 @@
 ---
 title: 'opencv podcast'
-tags: 'journal, talking, bible'
+tags: 'journal, talking'
 date: 'Feb 27, 2025'
 ---
 
@@ -10,7 +10,7 @@ i woke up sleep deprived for another day. i did not feel like doing the podcast.
 
 after about a full hour, it was finally over. we laughed about it, and i went back to bed to nap. woke up at 1pm and kept rotting in bed after. i felt confused and disoriented. got up to eat the lunch i was supposed to bring to class. i missed three classes today, felt guilty about spending so much money on tuition yet not making use of it. also felt anxious about the lectures i have to watch for finals.
 
-i'm still down with the flu, mind is fuzzy. went to get groceries, decided to buy pomfret fish ($4.19 / lb), which in total cost around $5. i decided to steam fish, cantonese style. i had fun gutting the fish, it took an hour, including the time it took to cut ginger and scallions and celery while talking to T. a few mistakes i made: scallion not thin enough, oil was not hot enough, i added too much oil which covered the soy sauce i had.
+i'm still down with the flu, mind is fuzzy. went to get groceries, decided to buy pomfret fish (\$4.19 / lb), which in total cost around \$5. i decided to steam fish, cantonese style. i had fun gutting the fish, it took an hour, including the time it took to cut ginger and scallions and celery while talking to T. a few mistakes i made: scallion not thin enough, oil was not hot enough, i added too much oil which covered the soy sauce i had.
 
 struggling with time series homework for the rest of the night. talked to mom while eating my fish.
 
