--- a/posts/301225.md
+++ b/posts/301225.md
@@ -6,7 +6,7 @@ date: 'Dec 30, 2025'
 
 we started the day driving down to waco to check out spice village. it’s on the second floor and has over 60 shops. it’s like a modern antique mall. we walked to fabled bookshop & cafe. i loved the book designs here. i found this book that was artsy and lovely. it’s from a cartoonist who featured over 50 bookstores through illustrations and quotes. i would love to do something like this one day, traveling the world and capturing places i love.
 
-![Footnotes from the World's Greatest Bookstores by Bob Eckstein](/images/drafts/301225-fabled.jpg)
+![Footnotes from the World's Greatest Bookstores by Bob Eckstein](/images/301225-fabled.jpg)
 
 on our way to round rock outlet, i realized most antique shops would be closed, so we stopped at village mall antiques in salado. at the outlet, i went straight to starbucks. i wanted to finish reading breakneck. and that i did. i finished the last pages of breakneck with a watery sweet matcha.
 
