--- a/posts/311225.md
+++ b/posts/311225.md
@@ -20,7 +20,7 @@ i visited more places in the US this year than any other year. a few snippets of
 
 ![Screenshot of my google maps of SF](/images/311225-sf2025.jpg)
 
-i moved to SF in july 2024 and landed in chinatown with W, my best friend from malaysia. we never planned to live there – it just happened to be available on craigslist and wasn't a scam. for $2300 a month, the 2b1b apartment sandwiched between ccsf and other apartments, was dark gray and minimal like an ikea showroom. not much light could get into the apartment. it did come furnished with an ikea desk and chairs, and two airbeds, left by a startup founder who left the country for reasons we were not aware of.****
+i moved to SF in july 2024 and landed in chinatown with W, my best friend from malaysia. we never planned to live there – it just happened to be available on craigslist and wasn't a scam. for $2300 a month, the 2b1b apartment sandwiched between ccsf and other apartments, was dark gray and minimal like an ikea showroom. not much light could get into the apartment. it did come furnished with an ikea desk and chairs, and two airbeds, left by a startup founder who left the country for reasons we were not aware of.
 
 we slowly built a small personal map of chinatown, pinning down spots like grocery stores with the lowest price for a certain ingredient – Hua Xing sold bitter melon and vegetables the cheapest, Dong Hing, right next door, had the lowest prices for tofu, Sheng Hing is where i bought cherries, one time for just $1.29 a pound. Wo Chong, for homemade soy milk. inside these stores, you would see old aunties and uncles, wrapped in thick jackets, pulling large trollies, pushing and squirming to pay. the cashiers would be hostile, and if you're too slow, they'd have an exasperated look on their faces, telling you to hurry up. sometimes the best thing you can do is just to hand them your cash and coins, and they would count it for you, and it would be time for you to scurry off.
 
@@ -100,7 +100,7 @@ i made a few silly mistakes in the past months, and had a supply chain attack ha
 
 the worst thing in life is to stay stagnant, whether that's in work or in relationships, if you're not being challenged, if you don't feel like pulling your hair out, or get so overwhelmed you feel like you're going to explode, then you're not becoming the best version of yourself. of course feeling that way all the time is unsustainable and you should probably seek professional help for your mental health. the key is to balance between speed and quality. that's the push and pull at the center of all the work i'm doing.
 
-another fun thing about working at an AI for doctors company is i get exposed to a ton of medical information and literature, not all of it sticks, but i've been exposed to more clinical content than ever, and i know acronyms and terms that i never would've thought i needed to know. and i've stared at more cancer guidelines than any other content i have in my life. and i still have no idea what most of it means.
+one fun thing about working at an AI for doctors company is i get exposed to a ton of medical information and literature, not all of it sticks, but i've been exposed to more clinical content than ever, and i know acronyms and terms that i never would've thought i needed to know. and i've stared at more cancer guidelines than any other content i have in my life. and i still have no idea what most of it means.
 
 this slows down my rate of progress since i require doctors and MDs to work with me to eval everything i do to achieve the level of excellence, because chatgpt and claude can only bring you so far, so a lot of my time is spent on evaluating llms, both in the code it writes for me with cc, and in the responses and answers.
 
@@ -114,7 +114,7 @@ writing good code became less about knowing the right patterns, but more about c
 some lessons and takeaways from my patterns at work
 
 
-1. not let work take over my entire life, block out time especially on Sundays for God, and for hobbies.
+1. not let work take over my entire life, not feel a jolt of anxiety at every slack notification, carve out sacred hours on Sundays for God, and for hobbies.
 2. not let fear be the driving force for my work, but do things from the perspective fun and play. the work is important and crucial, but don't forget to enjoy the process, and not focus only on the destination
 3. stay curious all the time. applies to fixing bugs, to building features, to talking to people. don't just end at the first obvious conclusion or answer, there's always something deeper. keep pulling on the thread. do not delegate understanding to AI. people also like you more if you ask them questions.
 4. stop overthinking, instead of letting your insecurities stop you, just say what you think, be true to yourself. or you'll regret it later and replay back conversations in the shower.
