--- a/posts/311225.md
+++ b/posts/311225.md
@@ -104,7 +104,7 @@ one fun thing about working at an AI for doctors company is i get exposed to a t
 
 this slows down my rate of progress since i require doctors and MDs to work with me to eval everything i do to achieve the level of excellence, because chatgpt and claude can only bring you so far, so a lot of my time is spent on evaluating llms, both in the code it writes for me with cc, and in the responses and answers.
 
-fundamentally, i'm picking up the skill that you really only learn when working at a fast-paced and small ragtag team of talented engineers, where given the constraints of time, where you're already juggling multiple tasks, sort them in your head by level of importance, and figure out the best solution for it with a level of taste that is acquired from intuition and heuristics. and another thing is to anticipate things so that you solve the problems even before they happen, and once you reach this level, you're capable of a lot of things.
+fundamentally, i'm picking up the skill that you really only learn when working at a fast-paced and small team of talented engineers, where given the constraints of time, where you're already juggling multiple tasks, sort them in your head by level of importance, and figure out the best solution for it with a level of taste that is acquired from intuition and heuristics. and another thing is to anticipate things so that you solve the problems even before they happen, and once you reach this level, you're capable of a lot of things.
 
 i'm still learning how to be willing to look dumb, and to not let your insecurities stop you from doing excellent work, how to cope with stressful situations. communication is hard on many levels, i didn't grow up in the US, and a lot of the culture and language was picked up only a few years ago, and since i don't interact with people that much in my day to day, i lag a lot and overthink about what is "right" to say and what isn't. almost as if i have to process a translator engine on top of my existing one, so i'm able to be understood better. and that's tiring. it's one of the challenges of being an immigrant. that shows up in the way i present in demos, i'm more safe, and the fear of making a bad joke or come off the wrong way outweighs my willingness to also partake in the art of making fun presentations. 
 
