--- a/posts/271124.md
+++ b/posts/271124.md
@@ -14,7 +14,7 @@ couldn't help myself and kept working on deeptalks. added support for traditiona
 
 watched aliens covenant, i thought it was pretty good. it was more philosophical, a machine that humans created to save ourselves, ended up engineering the perfect species that will end us in the end. a machine that was too idiosyncratic that could think for itself.
 
-bought a domain for deeptalks for 4 bucks on porkbun. to anyone reading this, try it [here](https://deeptalks.us). hopefully it'll still be up by the time you read this.
+bought a domain for deeptalks for 4 bucks on porkbun. to anyone reading this, try it [here](https://deeptalks.vercel.app). hopefully it'll still be up by the time you read this.
 
 got so sick of staying home that i went to the ferry building to take some pictures. was blessed with a beautiful sunset at pier 1. a 40% fair sunset prediction by sunsethue still turned out pretty nice. worked on homework at the open tables in the ferry building beside the bookstore.
 
